# fastAPI-WXPush

./: .dockerignore  .env.example  .gitignore  CODE_QUALITY.md  DEPLOY.md  README.md  api_keys.json.example  pyproject.toml  requirements.txt  test_api.py  技术栈分析.md
src/wxpush/: __init__.py  main.py
src/wxpush/core/: __init__.py  config.py  dependencies.py  logging_config.py  security.py
src/wxpush/routers/: __init__.py  send.py
src/wxpush/schemas/: __init__.py  send.py
src/wxpush/services/: __init__.py  wechat.py  workwechat.py
src/wxpush/utils/: __init__.py  http_client.py
templates/: detail.html
tests/: __init__.py  conftest.py  test_integration.py  test_security.py  test_send.py  test_wechat.py  test_workwechat.py
